Switched centered positioning from css alignment to css transform/translate. fixes #1 Changed parent classname from clockwork (old project name) to clockwise.

--- a/clockwise.css
+++ b/clockwise.css
@@ -3,10 +3,15 @@ html, body {
     width: 100%;
 }
 
-.clockwork {
+.clockwise {
     width: 100%;
     height: 100%;
     position: relative;
+    
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    
     background-color: #fff;
     background-image: radial-gradient(circle 50vh at center center,
         rgba(0,0,0,0) 0%,
@@ -27,11 +32,10 @@ html, body {
 
 .cw-0 {
     position: absolute;
-    top: 33.5vh;
-    left: calc(50% - 33vh / 2);
-    width: 33vh;
-    height: 33vh;
-    background: rgba(255,255,255,0.5);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255,0,0,0.5);
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -40,8 +44,8 @@ html, body {
 .cw-1 {
     position: absolute;
     bottom: 66.5vh;
-    left: calc(50% - 33vh / 2);
-    width: 33vh;
+    left: 50%;
+    transform: translateX(-50%);
     background: rgba(192,255,192,0.5);
     text-align: center;
 }
@@ -55,12 +59,10 @@ html, body {
 
 .cw-3 {
     position: absolute;
-    top: 33.5vh;
+    top: 50%;
+    transform: translateY(-50%);
     left: calc(50% + 33vh / 2);
-    height: 33vh;
     background: rgba(192,255,192,0.5);
-    display: table-cell;
-    vertical-align: middle;
 }
 
 .cw-4 {
@@ -73,8 +75,8 @@ html, body {
 .cw-5 {
     position: absolute;
     top: 66.5vh;
-    left: calc(50% - 33vh / 2);
-    width: 33vh;
+    left: 50%;
+    transform: translateX(-50%);
     background: rgba(192,255,192,0.5);
     text-align: center;
 }
@@ -88,9 +90,9 @@ html, body {
 
 .cw-7 {
     position: absolute;
-    top: 33.5vh;
+    top: 50%;
+    transform: translateY(-50%);
     right: calc(50% + 33vh / 2);
-    height: 33vh;
     background: rgba(192,255,192,0.5);
 }
 
